Add examples of enforcing nullability checks on project compile phase